methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
    while (isOverBaggle()==false){
    ^